Tabela para prova

--- a/projetosenac/src/main/resources/templates/Login/atualizando.html
+++ b/projetosenac/src/main/resources/templates/Login/atualizando.html
@@ -6,8 +6,9 @@
 	<link rel="stylesheet" href="css/login.css">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+
 	<!------ Include the above in your HEAD tag ---------->
-	<title>Login Usuário</title>
+	<title>Atualizar senha de Usuário</title>
 </head>
 
 <body>
@@ -15,40 +16,45 @@
 
 	<body>
 		<div id="login">
-			<h3 class="text-center text-white pt-5">Formulário de Login</h3>
+			<h3 class="text-center text-white pt-5">Formulário de Cadastro</h3>
 			<div class="container">
 				<div id="login-row" class="row justify-content-center align-items-center">
 					<div id="login-column" class="col-md-6">
 						<div id="login-box" class="col-md-12">
 
-							<form id="login-form" class="form" action="login" th:object="${usuario}" method="post">
-								<h3 class="text-center text-info">Login</h3>
+							<form id="cadastro-form" class="form" method="post" th:object="${usuario}"
+								action="atualizarUsuario">
+								<h3 class="text-center text-info">Formulário de atualização de senha</h3>
 
 								<div class="alert alert-danger" role="alert" th:if="${msg}">
 									<strong th:text="${msg}"></strong>
 								</div>
 
 								<div class="form-group">
-									<label for="username" class="text-info">Email:</label><br>
+									<label for="email" class="text-info">Email:</label><br>
 									<input type="email" name="email" id="email" th:field="*{email}" placeholder="email"
-										class="form-control">
+										class="form-control" readonly>
 								</div>
+								<div class="form-group">
+									<label for="login" class="text-info">Login:</label><br>
+									<input type="text" name="username" id="username" th:field="*{login}"
+										placeholder="username" class="form-control" readonly>
+								</div>
+
 								<div class="form-group">
 									<label for="password" class="text-info">Senha:</label><br>
 									<input type="password" name="password" id="password" th:field="*{senha}"
 										placeholder="password" class="form-control">
 								</div>
-								<div class="row">
-									<div class="col-md-4">
-										<button type="submit" class="btn btn-success">Logar</button>
-									</div>
 
-									<div class="col-md-4">
-										<a th:href="@{cadastro}" class="btn btn-warning">Não possui conta? </a>
-									</div>
-									<div class="col-md-4">
-										<a th:href="@{recuperarSenha}" class="btn btn-warning">Esqueceu a Senha? </a>
-									</div>
+								<div class="form-group">
+									<label for="password" class="text-info">Repetir Senha:</label><br>
+									<input type="password" name="password2" id="password2" th:field="*{senha2}"
+										placeholder="password" class="form-control">
+								</div>
+
+								<div id="register-link" class="text-center">
+									<button type="submit" class="btn btn-success">Cadastrar</button>
 								</div>
 							</form>
 						</div>
